# CodeCoach

View/: main.py
View/Controller/: ControllerProbManager.py
View/View/: AddProblemView.py  CodeEditorView.py  MainView.py
cpp_api/: CMakeLists.txt  build.sh  main.cpp
cpp_api/controllers/: EvaluationController.cpp  EvaluationController.h  ProblemController.cpp  ProblemController.h
cpp_api/models/: Problem.cpp  Problem.h
